--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.38.0
 nanobind==2.9.2
+
+# NNUE Training dependencies
+torch>=2.0.0
+numpy>=1.24.0
+tqdm>=4.65.0
