Add NNUE evaluation support and related testing framework
- Integrated NNUE evaluation functionality into the C++ codebase, including initialization and evaluation methods.
- Added a new `nnue_evaluator.cpp` and `nnue_evaluator.h` for handling NNUE model loading and evaluation.
- Updated `CMakeLists.txt` to include the new NNUE evaluator source file.
- Created `test_nnue.py` to facilitate testing of NNUE model export and evaluation from Python.
- Enhanced existing evaluation methods to utilize NNUE when available, falling back to traditional methods otherwise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ set(SOURCE_FILES
     src/move_ordering.cpp
     src/transposition_table.cpp
     src/evaluation.cpp
+    src/nnue_evaluator.cpp
     src/opening_book.cpp
     src/search_and_utils.cpp
 )
